# oxideav-ape

./: CHANGELOG.md  Cargo.toml  README.md
src/: cascade.rs  config.rs  decoder.rs  decorrelate.rs  entropy.rs  error.rs  file_header.rs  filter_config.rs  frame.rs  freq_model.rs  header.rs  lib.rs  pipeline.rs  predictor.rs  range_coder.rs  scalars.rs
src/tables/: counts_ge3990.csv  counts_le3980.csv  filter_config.csv  freqs_ge3990.csv  freqs_le3980.csv  ksum_min_boundary.csv  powers_of_two_minus_one.csv  scalars.csv
tests/: decorrelate.rs  frame_pipeline.rs  header_prefix.rs  predictor.rs  vendor_fixtures.rs
tests/fixtures/: left_silent_stereo.ape  noise_stereo.ape  silence_mono8k.ape  silence_stereo.ape  tone_lr_equal.ape  two_frame_mono8k.ape  zeros_then_noise_mono.ape
